# cmake-lib-example

./: README.md
dummyApp/: CMakeLists.txt
dummyApp/src/: main.c
dummyLib/: CMakeLists.txt
dummyLib/include/dummyLib/: foo.h
dummyLib/src/: foo.c
